refactor: restructure project into serial_stamp package
- Rename tiknum package to serial_stamp.
- Move main.py to serial_stamp/cli.py and gui.py to serial_stamp/gui.py.
- Move legacy ticket_number.py to scripts/.
- Update all imports to use serial_stamp namespace.
- Update pyproject.toml with new name and entry points.
- Rewrite README.md with updated usage and structure.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "image-manip"
+name = "serial-stamp"
 version = "0.1.0"
 description = ""
 readme = "README.md"
@@ -11,6 +11,10 @@ dependencies = [
 
 [[project.authors]]
 name = "Natoandro"
+
+[project.scripts]
+serial-stamp = "serial_stamp.cli:main"
+serial-stamp-gui = "serial_stamp.gui:main"
 
 [dependency-groups]
 dev = [
