--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "serial-stamp"
 version = "0.1.0"
@@ -20,3 +24,6 @@ serial-stamp-gui = "serial_stamp.gui:main"
 dev = [
     "pytest>=8.4.1",
 ]
+
+[tool.setuptools]
+packages = ["serial_stamp"]
