--- a/apps/serial-stamp-desktop/src-tauri/Cargo.toml
+++ b/apps/serial-stamp-desktop/src-tauri/Cargo.toml
@@ -23,4 +23,5 @@ serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
 tauri = { version = "2.9.5", features = [] }
 tauri-plugin-log = "2"
-uuid = { version = "1", features = ["v4"] }
+toml = "0.8"
+uuid = { version = "1", features = ["v4", "serde"] }
