--- a/apps/serial-stamp-desktop/src-tauri/Cargo.toml
+++ b/apps/serial-stamp-desktop/src-tauri/Cargo.toml
@@ -25,3 +25,6 @@ tauri = { version = "2.9.5", features = [] }
 tauri-plugin-log = "2"
 toml = "0.8"
 uuid = { version = "1", features = ["v4", "serde"] }
+zip = "0.6"
+walkdir = "2"
+tauri-plugin-dialog = "2.6.0"
